ci/helm/vaNetworkPolicy.yaml
#
# COPYRIGHT Ericsson 2023
#
#
#
# The copyright to the computer program(s) herein is the property of
#
# Ericsson Inc. The programs may be used and/or copied only with written
#
# permission from Ericsson Inc. or in accordance with the terms and
#
# conditions stipulated in the agreement/contract under which the
#
# program(s) have been supplied.
#

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: va-analysis-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: eric-oss-performance-monitoring-enabler
      app.kubernetes.io/instance: eric-oss-performance-monitoring-enabler-release
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: owasp-zap
        - podSelector:
            matchLabels:
              app: nmap
  policyTypes:
    - Ingress
